[gd_scene format=3 uid="uid://b75yggsnay1mo"]

[ext_resource type="Script" uid="uid://bx5rlh0opi80k" path="res://connection/connection.gd" id="1_c7jwa"]
[ext_resource type="Script" uid="uid://uiuper6f5unf" path="res://connection/logger_level_toggle.gd" id="3_advu3"]
[ext_resource type="PackedScene" uid="uid://b5vmo8llucetx" path="res://ui/status_indicator.tscn" id="3_bya50"]
[ext_resource type="Script" uid="uid://clp7f22aqopw6" path="res://connection/http_tools.gd" id="5_advu3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm8ps"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.2484, 0.2484, 0.2484, 1)

[node name="Connection" type="Node" unique_id=1910356940]
script = ExtResource("1_c7jwa")

[node name="ToriiClient" type="ToriiClient" parent="." unique_id=228659588]

[node name="DojoSessionAccount" type="DojoSessionAccount" parent="." unique_id=530222218]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1778622463]
layer = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer" unique_id=1449580776]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 254.0
grow_horizontal = 2
alignment = 1

[node name="Status" type="FoldableContainer" parent="CanvasLayer/HBoxContainer" unique_id=589799843]
custom_minimum_size = Vector2(160, 254)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gm8ps")
folded = true
title = "Status"
title_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/Status" unique_id=1942690748]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ClientStatus" parent="CanvasLayer/HBoxContainer/Status/HBoxContainer" unique_id=449534607 instance=ExtResource("3_bya50")]
unique_name_in_owner = true
layout_mode = 2
type_name = "Client"

[node name="DojoSessionAccountStatus" parent="CanvasLayer/HBoxContainer/Status/HBoxContainer" unique_id=994125530 instance=ExtResource("3_bya50")]
unique_name_in_owner = true
layout_mode = 2
type_name = "Session"

[node name="EventUpdatesStatus" parent="CanvasLayer/HBoxContainer/Status/HBoxContainer" unique_id=1425089885 instance=ExtResource("3_bya50")]
unique_name_in_owner = true
layout_mode = 2
type_name = "EventUpdates"

[node name="EntityUpdatesStatus" parent="CanvasLayer/HBoxContainer/Status/HBoxContainer" unique_id=48734953 instance=ExtResource("3_bya50")]
unique_name_in_owner = true
layout_mode = 2
type_name = "EntityUpdates"

[node name="Logger" type="FoldableContainer" parent="CanvasLayer/HBoxContainer" unique_id=954893422]
custom_minimum_size = Vector2(160, 254)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gm8ps")
folded = true
title = "Logger Level"
title_alignment = 1

[node name="Vbox" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/Logger" unique_id=1046848288]
visible = false
layout_mode = 2

[node name="ErrorStatus" type="CheckButton" parent="CanvasLayer/HBoxContainer/Logger/Vbox" unique_id=1091317712]
layout_mode = 2
text = "Error"
script = ExtResource("3_advu3")
_level = "error"
metadata/_custom_type_script = "uid://uiuper6f5unf"

[node name="WarningStatus" type="CheckButton" parent="CanvasLayer/HBoxContainer/Logger/Vbox" unique_id=1205957447]
layout_mode = 2
text = "Warning"
script = ExtResource("3_advu3")
_level = "warning"
metadata/_custom_type_script = "uid://uiuper6f5unf"

[node name="InfoStatus" type="CheckButton" parent="CanvasLayer/HBoxContainer/Logger/Vbox" unique_id=693208367]
layout_mode = 2
text = "Info"
script = ExtResource("3_advu3")
_level = "info"
metadata/_custom_type_script = "uid://uiuper6f5unf"

[node name="DebugStatus" type="CheckButton" parent="CanvasLayer/HBoxContainer/Logger/Vbox" unique_id=234486895]
layout_mode = 2
text = "Debug"
script = ExtResource("3_advu3")
_level = "debug"
metadata/_custom_type_script = "uid://uiuper6f5unf"

[node name="SuccessStatus" type="CheckButton" parent="CanvasLayer/HBoxContainer/Logger/Vbox" unique_id=1914073480]
layout_mode = 2
text = "Success"
script = ExtResource("3_advu3")
_level = "success"
metadata/_custom_type_script = "uid://uiuper6f5unf"

[node name="SaveSettings" type="Button" parent="CanvasLayer/HBoxContainer/Logger/Vbox" unique_id=1778223233]
layout_mode = 2
text = "Save to Project"

[node name="HttpTools" type="Node" parent="." unique_id=1618556654]
script = ExtResource("5_advu3")
html_file = "res://connection/template.html"
metadata/_custom_type_script = "uid://clp7f22aqopw6"

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Logger/Vbox/SaveSettings" to="." method="_on_save_settings_pressed"]
